--- a/packages/app/src/styles/main.css
+++ b/packages/app/src/styles/main.css
@@ -1,3 +1,6 @@
 @import "tailwindcss";
 
+@import "./theme.css" layer(theme);
+@custom-variant dark (&:where(.theme-dark, .theme-dark *));
+
 @plugin "@tailwindcss/typography";
