feat: fix dark theme colours + cn + fixes

--- a/packages/app/src/styles/theme.css
+++ b/packages/app/src/styles/theme.css
@@ -1,7 +1,9 @@
 @theme {
   --color-background: #fafafa;
+  --color-on-background: #222222;
 }
 
 .theme-dark {
   --color-background: #1f1f1f;
+  --color-on-background: #bbbbbb;
 }
