--- a/packages/app/src/styles/theme.css
+++ b/packages/app/src/styles/theme.css
@@ -1,5 +1,5 @@
 @theme {
-  --color-background: var(--color-zinc-300);
+  --color-background: var(--color-blue-300);
   --color-on-background: var(--color-black);
   --color-button: var(--color-zinc-200);
 }
