--- a/packages/app/src/styles/main.css
+++ b/packages/app/src/styles/main.css
@@ -11,3 +11,20 @@
 html {
   overscroll-behavior: none;
 }
+
+/* 🚧 migrate to actual "lock element" */
+.react-grid-item::before {
+  content: "🔽";
+  position: absolute;
+  bottom: 0.125rem;
+  left: 0.125rem;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--color-background);
+  width: 1rem;
+  height: 1rem;
+  filter: grayscale(1) invert(1);
+  opacity: 0.5;
+}
