--- a/packages/app/src/styles/main.css
+++ b/packages/app/src/styles/main.css
@@ -7,6 +7,7 @@
 
 @source "../../../../packages/cli/src";
 @source "../../../../packages/ui";
+@source "../../../../packages/util/src/components";
 
 html {
   overscroll-behavior: none;
