--- a/packages/app/src/styles/theme.css
+++ b/packages/app/src/styles/theme.css
@@ -1,5 +1,5 @@
 @theme {
-  --color-background: var(--color-emerald-100);
+  --color-background: var(--color-gray-400);
   --color-on-background: var(--color-black);
   --color-button-background: var(--color-zinc-100);
   --color-spinner: var(--color-zinc-400);
